--- a/package.json
+++ b/package.json
@@ -2,16 +2,30 @@
   "name": "traveler",
   "version": "0.1.0",
   "private": true,
+
   "dependencies": {
     "express": "^4.15.2",
+    "body-parser": "^1.15.2",
+    "morgan": "^1.7.0",
+    "pg": "^6.1.2",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^3.29.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
+
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "faker": "^3.1.0",
+    "mocha": "^3.2.0",
+    "nodemon": "^1.11.0"
   },
+
   "scripts": {
     "start": "react-scripts start",
+    "start server": "nodemon server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
