--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "morgan": "^1.7.0",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^3.29.0"
+    "sequelize": "^3.29.0",
+    "nodemon": "^1.11.0"
   },
 
   "devDependencies": {
@@ -16,7 +17,6 @@
     "chai-http": "^3.0.0",
     "faker": "^3.1.0",
     "mocha": "^3.2.0",
-    "nodemon": "^1.11.0"
   },
 
   "scripts": {
