--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js: node
 services: postgresql
-before_script: psql -c 'create database travis_ci_test;' -U postgres
+before_script: psql -c 'create database test-traveler-app;' -U postgres
 deploy:
   provider: heroku
   api_key:
