--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "main": "server.js",
   "dependencies": {
     "aws-sdk": "^2.49.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "express": "^4.15.2",
     "moment": "^2.18.1",
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.29.0"
