--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "aws-sdk": "^2.49.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
+    "express-session": "^1.15.2",
+    "express-sessions": "^1.0.6",
     "moment": "^2.18.1",
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
