--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-sessions": "^1.0.6",
     "moment": "^2.18.1",
     "morgan": "^1.7.0",
+    "node-geocoder": "^3.16.0",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-http": "^0.3.0",
